
	* lisp/sawfish/wm/customize.jl: With new "customize-redirect" option, Sawfish-UIs output can be redirected [Teika Kazura]

	* OPTIONS
	* man/news.texi: updated

	* lisp/sawfish/wm/misc.jl: squashed the last compiler warning in rep-code [Matthew Love]

	* Makefile.in: don't remove ancient Sawmill.desktop

	* lisp/sawfish/wm/user.jl: display-message-with-timeout now must be called with a timeout

2009-09-11  Christopher Bratusek <zanghar@freenet.de>
	* configure.in
	* Makedefs.in
	* Makefile.in: check for installation path of sawfish-ksm.desktop via kde4-config

	* lisp/sawfish/wm/ext/fdo-menu.jl: added copyright header
	                                   make update-sawfish-menu work without restarting sawfish
					   -- (after intial call on sawfish-startup) [Matthew Love]

2009-09-08  Christopher Bratusek <zanghar@freenet.de>
	* lisp/sawfish/wm/util/prompt.jl: squashed the last compiler warnings [Matthew Love]

2009-09-07  Christopher Bratusek <zanghar@freenet.de>
	* lisp/sawfish/wm/user.jl
	* lisp/sawfish/wm/misc.jl
	* lisp/sawfish/wm/edge-flip.jl: squashed compiler warnings [Matthew Love]

	* lisp/sawfish/wm/ext/error-handler.jl: export `error-handler-function' [Matthew Love]

	* lisp/sawfish/wm/state/maximize.jl: squashed a compiler warning

	* lisp/sawfish/wm/integration/kde.jl: added logout, reboot and shutdown entries

	* lisp/sawfish/wm/theming/make-theme.jl: make-image is defined the *second* time here
	                                         the first time in gaol, rename this instance to
						 make-image-possibly-from-cache to avoid confusion
						 for both users and the rep-compiler 
						 also squashes a compiler warning [Matthew Love]

	* src/play-sample.c
	* man/faq.texi: s/Gnome/GNOME/

2009-09-06  Christopher Bratusek <zanghar@freenet.de>
	* lisp/sawfish/wm/ext/fdo-menu.jl: Partial rewrite of fdo-menu [Matthew Love]

	* lisp/sawfish/wm/user.jl
	* lisp/sawfish/wm/defaults.jl
	* lisp/sawfish/wm/extras.jl: sawfish.wm.extras removed