@@ -46,6 +46,8 @@
 	* Makefile.in: don't remove ancient Sawmill.desktop
 
 	* lisp/sawfish/wm/user.jl: display-message-with-timeout now must be called with a timeout
+	                           header updated
+				   description for view-clipboard
 
 2009-09-11  Christopher Bratusek <zanghar@freenet.de>
 	* configure.in
